2008-05-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac, Makefile.am: Install documentation according to
	the conventions established by the configure script.  This
	installs the documentation under
	/usr/local/share/doc/GraphicsMagick by default.

2008-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (HorizontalFilter, VerticalFilter): Switch back
	to RoundSignedToQuantum() since some pixels were experiencing
	underflow.  Localize some variables so that we don't have to
	declare them as private for OpenMP.
	* configure.ac, PerlMagick/Makefile.PL.in: Added OpenMP support
	for parallelizing a task across multiple cores.  OpenMP support is
	disabled by default so that there is no impact to the existing
	GraphicsMagick 1.2 ABI unless it is intentionally included in the
	build.

2008-05-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (ResizeImage): Optimize VerticalFilter and
	HorizontalFilter a bit more and prepare for use of OpenMP.

2008-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	
	* configure.ac, magick/nt_base.h: Fix using libbz2 under MinGW.	
	* coders/{msl.c, svg.c, url.c}: Fix compilation with modern
	libxml2 under MinGW.

2008-05-08  Josue Andrade Gomes  <josuegomes@gmail.com>

	* magick/nt_base.h, libxml/include/win32config.h (vsnprintf):
	Fixed compilation issue noticed with Visual C++ 2008.

2008-05-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.1 released.
	* BENCHMARKS.txt: Added a section for execution overhead
	measurements.

2008-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (GetMagickInfo): Simplify implementation.
	(RegisterMagickInfo): Remove any existing entry since module
	loading may result in duplicate entries.

2008-05-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtool: Update to libtool 1.2.4.
	* GraphicsMagick.spec.in: Add --with-included-ltdl to the default