@@ -24,6 +24,8 @@
 2008-05-12  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/command.c (VersionCommand): Report if OpenMP is supported
+        by the build.<BR>
   <LI> configure.ac, Makefile.am: Install documentation according to
         the conventions established by the configure script.  This
         installs the documentation under
